import "google/protobuf/descriptor.proto";
package barobo.rpc.options;

message VersionTriplet {
    optional uint32 major = 1;
    optional uint32 minor = 2;
    optional uint32 patch = 3;
}

extend google.protobuf.FileOptions {
    optional VersionTriplet version = 50000;
}

message AttributeOptions {
    optional bool readonly = 1;
    optional bool noSubscriptions = 2;
}

message MethodOptions {
    optional bool fireAndForget = 1;
}

message BroadcastOptions {
    optional bool selective = 1;
}

extend google.protobuf.MessageOptions {
    optional AttributeOptions attribute = 50000;
    optional MethodOptions method = 50001;
    optional BroadcastOptions broadcast = 50002;
}
